Fix ads spacing in updates page

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -940,7 +940,10 @@ div.toastify.error{
     align-items: center;
     justify-content: center;
 }
-
+#app main.main .main__wrap.updates .vealo {
+    text-align: center;
+    padding-bottom: 2rem
+}
 // :SECTION CATEGORIES
 #app main.main .home__categories{
 	display: grid;
